@@ -17,12 +17,18 @@
  * @class DCPS_Entity_Id_Generator
  *
  * @brief Used to generate ids for the entities in the DCPSInfoRepo.
- *        The high 16 bits is the domain id and the low 16 bits is
- *        the counter. 
  *
- * The ids are intended to be unique acoss domains but duplicates 
- * will be created inside domain after 65534 ids have been generated. 
- * Zero (0) will not be generated.  Zero is reservered for an invalid Id.
+ * The ids are intended to be unique but duplicates will be created
+ * after 4,294,967,294 ids have been generated.  Zero (0) will not be
+ * generated.  Zero is reservered for an invalid Id.
+ * 
+ * Note: The sub/pub (or participant or topic) ids are unique per 
+ *       DCPSInfoRepo instance. This allows multiple domains in same
+ *       process (connect to single DCPSInfoRepo instance in current
+ *       implementation) to use the same transport instance. If we need
+ *       support multiple domains to use same transport instance in same 
+ *       process but each domain connect to a different DCPSInfoRepo 
+ *       instance then we need review this unique id generation schema.
  */
 class DCPS_Entity_Id_Generator
 {
